--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
-look into step functions
+SQS + Lambda Architecture Implementation - COMPLETED
 
-decided to not use sqs, tell cursor to change the architecture
+See docs/ARCHITECTURE.md for full details.
