feat(pipeline) - linked python workers to four go workers

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,1 @@
-SQS + Lambda Architecture Implementation - COMPLETED
-
-See docs/ARCHITECTURE.md for full details.
+learn about air.toml, kill delay and send interrupt
